--- a/ecommerce/frontend/src/index.css
+++ b/ecommerce/frontend/src/index.css
@@ -6,8 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-header {
+.site-cointainer {
+  min-height: 100vh;
+}
+/* header {
   background-color: #404040;
   padding: 1rem;
 }
@@ -15,9 +17,9 @@ header a {
   color: #ffff;
   font-weight: bold;
   text-decoration: none;
-}
+} */
 main {
-  padding: 1rem;
+  flex: 1;
 }
 .products {
   display: flex;
