--- a/ecommerce/frontend/src/index.css
+++ b/ecommerce/frontend/src/index.css
@@ -21,12 +21,20 @@ header a {
 main {
   flex: 1;
 }
+
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
+.rating span {
+  color: #ffc000;
+}
 .product {
   border: 1px #404040 solid;
   margin: 1rem;
@@ -34,7 +42,11 @@ main {
 .product img {
   width: 100%;
   max-width: 400px;
-  max-height: 300px;
+  height: auto;
+  /* max-height: 200px; */
+}
+.img-resize {
+  height: 30vh;
 }
 .product-info {
   padding: 1rem;
